--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,44 @@ body{
     color: #7b7b7b;
     font-weight: 400;
 }
+
+.purple-bg{
+    background-image: url(../images/brown_bg.jpg);
+}
+
+.user-links{
+    text-transform: uppercase;
+    font-size: 12px;
+    color: #ad9198;
+    text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.35);
+    padding: 15px 0px;
+
+}
+
+.user-links a{
+    color: #ad9198;
+    text-decoration: none;
+}
+
+.user-links a:hover{
+    color: #e2c8cf;
+}
+
+.user-links ul{
+    list-style: none;
+    margin: 0;
+}
+
+.user-links ul li{
+    float: left;
+    padding: 0 10px;
+}
+
+.user-links .col-9 ul li:last-child{
+    padding-right: 0;
+}
+
+.menu-bg{
+    background-color: #fff;
+    border-bottom: solid #d0d0d0 4px;
+}
