--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-
-/*font-family: 'Crimson Text', serif;*/
-
 body{
     font-family: 'Open Sans', sans-serif;
     background-color: #f8f8f8;
@@ -13,12 +10,17 @@ body{
     background-image: url(../images/brown_bg.jpg);
 }
 
+.header-bg{
+    background: url(../images/header_bg.jpg);
+    background-position: top center;
+}
+
 .user-links{
     text-transform: uppercase;
     font-size: 12px;
     color: #ad9198;
     text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.35);
-    padding: 15px 0px;
+    padding: 15px 0 0 0;
 
 }
 
@@ -31,21 +33,252 @@ body{
     color: #e2c8cf;
 }
 
-.user-links ul{
+.user-links li:hover a i{
+    transform: rotate(-180deg);
+}
+
+.user-links i{
+    margin-left: 6px;
+    color: #dbd1b6;
+    transition: all ease 0.3s;
+}
+
+.currency{
     list-style: none;
     margin: 0;
+    padding: 0;
 }
 
-.user-links ul li{
+.currency li{
     float: left;
-    padding: 0 10px;
+    position: relative;
+    padding: 0 10px 15px 10px;
 }
 
-.user-links .col-9 ul li:last-child{
+.col-9 .currency li:last-child{
     padding-right: 0;
+}
+
+.region-dropdown::before{
+    content: "";
+    position: absolute;
+    left: 50%;
+    top:-5px;
+    transform: translate(-50%,0);
+    display: block;
+    width: 0px;
+    height: 0px;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 5px solid #fff;
+}
+
+.region-dropdown{
+    position: absolute;
+    left: 50%;
+    top: 28px;
+    transform: translate(-50%,0);
+    display: none;
+    z-index: 999;
+    padding: 0;
+}
+
+.region-dropdown li{
+    float: none;
+    background-color: #fff;
+    list-style: none;
+    padding: 0;
+}
+
+.region-dropdown li a{
+    display: block;
+    text-align: center;
+    color: #707070;
+    padding: 4px 20px;
+    text-shadow: none;
+    font-size: 11px;
+}
+
+.region-dropdown li a:hover{
+    color: #707070;
+    background-color: #efefef;
+}
+
+.user-links li:hover > .region-dropdown{
+    display: block;
+}
+
+.logo{
+    font-family: 'Crimson Text', serif;
+    font-size: 30px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #fff;
+    text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.35);
+}
+
+.logo a{
+    color: #fff;
+    text-decoration: none;
+}
+
+.logo img{
+    margin-top: -15px;
+}
+
+.logo-year{
+    font-style: italic;
+    font-size: 12px;
+    color: #ad9198;
+    margin-bottom: 35px;
+}
+
+.logo-year:first-of-type span{
+    margin-right: 10px;
+}
+
+.logo-year:last-of-type span{
+    margin-left: 10px;
+}
+
+.gradient-1{
+    background: linear-gradient(to right, rgba(124,66,75,1) 0%, rgba(171,141,148,1) 100%);
+}
+
+.gradient-2{
+    background: linear-gradient(to right,  rgba(171,141,148,1) 0%, rgba(124,66,75,1) 100%);
+}
+
+.year-shape{
+    display: inline-block;
+    vertical-align: middle;
+    height: 1px;
+    width: 75px;
 }
 
 .menu-bg{
     background-color: #fff;
     border-bottom: solid #d0d0d0 4px;
+}
+
+.main-menu{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-transform: uppercase;
+    font-size: 17px;
+}
+
+.main-menu a{
+    display: inline-block;
+    padding: 15px;
+    color: #3c3c3c;
+}
+
+.main-menu a:hover{
+    text-decoration: none;
+    color: #b4a066;
+}
+
+.main-menu li{
+    float: left;
+    position: relative;
+    white-space: nowrap;
+}
+
+.main-menu li:first-child a{
+    padding-left: 0;
+}
+
+.main-menu li:hover > .sub-menu{
+    display: flex;
+}
+
+.sub-menu{
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    border-top: 3px solid #b39f66;
+    padding: 35px;
+    list-style: none;
+    z-index: 999;
+    box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.1);
+}
+
+.sub-menu li ul{
+    list-style: none;
+}
+
+.sub-menu a{
+    padding: 0;
+}
+
+.sub-menu li ul li:first-child a{
+    padding-top: 0;
+    color: #3c3c3c;
+    text-transform: uppercase;
+}
+
+.sub-menu li ul li a{
+    padding: 0;
+    color: #808080;
+    font-size: 17px;
+    text-transform: none;
+    padding: 8px 20px;
+}
+
+.search{
+    padding: 15px 0px 10px 0px;
+    position: relative;
+    text-transform: uppercase;
+    color: #3c3c3c;
+    overflow: hidden;
+}
+
+.search span{
+    position: absolute;
+    right: 0;
+}
+
+.search span:hover{
+    cursor: pointer;
+}
+
+.search input{
+    position: absolute;
+    left: 0;
+    top: 15px; 
+    width: 0%;
+    opacity: 0;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px solid #d6d6d6;
+    font-size: 15px;
+    line-height: 1.15;
+    padding-bottom: 5px;
+    padding-right: 15px;
+}
+
+.search input:focus{
+    outline: none;
+}
+
+.hide{
+    display: none !important;
+}
+
+.search i{
+    right: 70px;
+    position: absolute;
+    color: #c9ba91;
+    line-height: 1.5;
+}
+
+.cart{
+    padding: 15px 0;
+}
+
+.cart i{
+    line-height: 1.5;
 }
