--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ body{
 
 .main-menu li{
     float: left;
-    position: relative;
+    
     white-space: nowrap;
 }
 
@@ -228,7 +228,7 @@ body{
 }
 
 .search{
-    padding: 15px 0px 10px 0px;
+    padding: 16px 0px 10px 0px;
     position: relative;
     text-transform: uppercase;
     color: #3c3c3c;
@@ -276,17 +276,82 @@ body{
 }
 
 .cart{
-    padding: 15px 0;
+    padding: 16px 0 15px 0;
     color:#3c3c3c;
     text-transform: uppercase;
 }
 
-.cart:hover{
-    cursor: pointer;
+.cart ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
-.cart:hover > i:last-of-type{
+.cart ul li{
+    display: flex;
+    border-bottom: 1px solid #d6d6d6;
+    margin-bottom: 25px;
+    padding-bottom: 25px;
+}
+
+.item-info{
+    margin: 0px 22px;
+}
+
+.item-info a{
+    color: #3c3c3c;
+}
+
+.item-info a:hover{
+    text-decoration: none;
+}
+
+.item-info h4{
+    font-size: 15px;
+}
+
+.item-info h5{
+    font-size: 14px;
+    color: #9e9e9e;
+}
+
+.item-info h4{
+    white-space: nowrap;
+}
+
+.item-info i{
+    line-height: 0;
+}
+
+.item-del{
+    line-height: 0;
+}
+
+.item-del a i{
+    line-height: 1.15;
+}
+
+.item-del a{
+    color: #9e9e9e;
+    font-size: 14px;
+}
+
+.item-del a:hover{
+    color: #ba2727;
+}
+
+.cart:hover > i.fa-angle-down{
     transform: rotate(-180deg);
+}
+
+.cart > .sub-menu{
+    margin-top: 15px;
+    right: 0;
+    flex-direction: column;
+}
+
+.cart:hover > .sub-menu{
+    display: flex;
 }
 
 .cart i{
@@ -299,7 +364,31 @@ body{
     padding: 0 5px;
 }
 
-.cart i:last-of-type{
+.cart i.fa-angle-down{
     color: #c0ae7b;
     margin-left: 10px;
+}
+
+.cart-total{
+    margin-bottom: 25px;
+}
+
+.cart-total div{
+    font-size: 18px;
+    color: #000;
+    font-weight: 700;
+}
+
+.cart-submit a{
+    font-weight: 700;
+    font-size: 15px;
+    color: #c5b486;
+    border: solid #c5b486 3px;
+    padding: 7px;
+}
+
+.cart-submit a:hover{
+    text-decoration: none;
+    color: #fff;
+    background-color: #c5b486;
 }
