--- a/css/style.css
+++ b/css/style.css
@@ -598,10 +598,6 @@ body{
     color: #3c3c3c !important;
 }
 
-.products-carousel{
-    margin-bottom: 80px;
-}
-
 .item-box{
     position: relative;
     margin-bottom: 15px;
@@ -781,7 +777,8 @@ body{
     text-transform: uppercase;
     font-size: 60px;
     line-height: 1;
-    padding: 65px 0; 
+    padding: 65px 0;
+    margin-top: 80px;
 }
 
 .content-sale-bar p:first-of-type{
@@ -812,4 +809,110 @@ body{
     cursor: pointer;
     border: solid #c5b486 3px;
     background-color: transparent;
+}
+
+.article{
+    position: relative;
+}
+
+.article-thumbnail{
+    position: relative;
+    z-index: 1;
+    background-color: #000;
+    
+}
+
+.article-thumbnail a{
+    display: block;
+    opacity: 0;
+    position: absolute;
+    z-index: 100;
+    background-color: #c5b486;
+    border: 3px solid transparent;
+    outline: none;
+    color: #fff;
+    font-size: 18px;
+    text-transform: uppercase;
+    font-weight: 700;
+    padding: 10px 20px;
+    line-height: 1.5;
+    left: 50%;
+    top: 30%;
+    transform: translate(-50%,-50%);
+    transition: opacity ease 0.3s;
+}
+
+.article-thumbnail a:hover{
+    cursor: pointer;
+    border: solid #c5b486 3px;
+    background-color: transparent;
+    text-decoration: none;
+}
+
+.article-thumbnail img{
+    transition: all ease 0.3s;
+}
+
+.article-thumbnail:hover img{
+    opacity: 0.5;
+    
+}
+
+.article-thumbnail:hover a{
+    opacity: 1;
+}
+
+.article-content{
+    position: relative;
+    z-index: 2;
+    margin: -20% 30px 0 30px;
+    padding: 40px;
+}
+
+.article-date{
+    font-size: 14px;
+    color: #9e9e9e;
+    background-color: #fff;
+    position: absolute;
+    right: 0;
+    top: -33px;
+    padding: 6px 8px;
+}
+
+.article-date i{
+    color: #c0ae7b;
+    margin-right: 5px;
+}
+
+.article-content h3{
+    border-bottom: 1px #e0dbce solid;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    font-size: 22px;
+    text-transform: uppercase;
+}
+
+.article-content h3 a{
+    color: #3c3c3c;
+}
+
+.article-content h3 a:hover{
+    text-decoration: none;
+    color: #858585;
+}
+
+.article-content p{
+    text-align: justify;
+}
+
+.article-content > a{
+    text-transform: uppercase;
+    color: #3c3c3c;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.article-content > a::after{
+    font-family: 'FontAwesome';
+    content: ' \f105';
 }
