--- a/css/style.css
+++ b/css/style.css
@@ -487,19 +487,23 @@ body{
     background-color: #fff;
     box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.1);
     min-height: 170px;
+    
 }
 
 .weding-dress{
+    height: 100px;
     background-color: #fff;
     background: #fff url(../images/dress.jpg) top right no-repeat;
 }
 
 .jewellery{
+    height: 100px;
     background-color: #fff;
     background: #fff url(../images/jewellery.jpg) top right no-repeat;
 }
 
 .bouquets{
+    height: 100px;
     background-color: #fff;
     background: #fff url(../images/bouquets.jpg) top right no-repeat;
 }
@@ -570,6 +574,7 @@ body{
     height: 3px;
     width: 35px;
     bottom: 0;
+    left: 0;
 
 }
 
@@ -1037,4 +1042,10 @@ body{
 .footer-social-icons li a:hover{
     background-color: #c5b486;
     color: #fff;
+}
+
+.copyrights{
+    font-size: 14px;
+    color: #3c3c3c;
+    padding: 30px;
 }
