--- a/css/style.css
+++ b/css/style.css
@@ -1049,3 +1049,19 @@ body{
     color: #3c3c3c;
     padding: 30px;
 }
+
+@media (min-width: 768px) and (max-width: 991px) { 
+    .main-owl-carousel{
+        height: 351px;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+    .main-menu a{
+        padding: 15px 10px;
+    }
+    .main-owl-carousel{
+        height: 468px;
+    }
+}
+
