--- a/css/style.css
+++ b/css/style.css
@@ -1054,6 +1054,12 @@ body{
     display: none;
 }
 
+@media (max-width: 767.99px) {
+    .user-links div{
+        justify-content: center !important;
+    }
+ }
+
 @media (max-width: 991.99px) {
     .tabs-row div.col-lg{
         margin-bottom: 30px;
