--- a/css/style.css
+++ b/css/style.css
@@ -289,6 +289,7 @@ body{
     margin: 0;
     padding: 0;
     list-style: none;
+    list-style-image: url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7);
 }
 
 .cart ul li{
